# Discord

./: Cargo.toml  README.md
src/: commands.rs  handler.rs  main.rs
src/cmds/: roles.rs
src/components/: mod.rs
src/components/embed/: embed.rs
src/components/select_menu/: mod.rs  select_roles.rs
