[package]
name = "ragnarok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.12.1" }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
